BadgeDao tests created and working.

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
             <artifactId>el-api</artifactId>
             <version>2.2.1-b04</version>
         </dependency>
+        <dependency>
+            <groupId>org.sonatype.sisu</groupId>
+            <artifactId>sisu-inject-bean</artifactId>
+            <version>1.4.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
