PokemonDTO has been added and implemented. Some more refactoring has been done. PokemonFacede interface has been added.

--- a/pokemon-persistence/pom.xml
+++ b/pokemon-persistence/pom.xml
@@ -14,6 +14,11 @@
     <name>pokemon-persistence</name>
     <dependencies>
         <dependency>
+            <groupId>cz.muni.fi.pa165</groupId>
+            <artifactId>pokemon-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>6.8.1</version>
