--- a/pokemon-api/pom.xml
+++ b/pokemon-api/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>cz.muni.fi.pa165</groupId>
     <artifactId>pokemon-api</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>pokemon-api</name>
     <dependencies>
         <dependency>
