--- a/pokemon-web/pom.xml
+++ b/pokemon-web/pom.xml
@@ -28,6 +28,12 @@
             <version>1.2</version>
         </dependency>
         <dependency>
+            <groupId>cz.muni.fi.pa165</groupId>
+            <artifactId>pokemon-api</artifactId>
+            <version>1.0</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
