directory tree changed - added pokemon directory

--- a/pokemon-web/pom.xml
+++ b/pokemon-web/pom.xml
@@ -34,6 +34,11 @@
             <type>jar</type>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>pokemon-service</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
