--- a/pokemon-persistence/pom.xml
+++ b/pokemon-persistence/pom.xml
@@ -85,6 +85,7 @@
             <groupId>javax.el</groupId>
             <artifactId>el-api</artifactId>
             <version>2.2.1-b04</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.sonatype.sisu</groupId>
