--- a/pokemon-web/pom.xml
+++ b/pokemon-web/pom.xml
@@ -20,6 +20,15 @@
         
     </properties>
     
+    <repositories>
+  
+        <repository>
+            <id>spring-snapshot</id>
+            <name>Spring Snapshot Repository</name>
+            <url>https://repo.spring.io/snapshot</url>
+        </repository>
+    </repositories>
+    
     <dependencies>
         
         <dependency>
@@ -37,6 +46,16 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>pokemon-service</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>4.0.3.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>4.0.3.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
