--- a/pokemon-web/pom.xml
+++ b/pokemon-web/pom.xml
@@ -145,7 +145,7 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <path>/eshop</path>
+                    <path>/pa165</path>
                 </configuration>
             </plugin>
         </plugins>
