--- a/pokemon-web/pom.xml
+++ b/pokemon-web/pom.xml
@@ -121,6 +121,13 @@
             <version>4.0.3.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>cz.muni.fi.pa165</groupId>
+            <artifactId>eshop-persistence</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
